--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gym-routine-tracker",
   "version": "0.1.0",
-  "homepage": "https://frontrowwithj.github.io/gym-routine-tracker",
+  "homepage": "https://frontrowwithj.github.io/gym-routine-tracker/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
