--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gym-routine-tracker",
   "version": "0.1.0",
-  "homepage": "https://gym-routine-tracker.netlify.app/",
+  "homepage": "https://gym-routine-tracker.netlify.app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
