--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 directory = "/"
-command = "npm install && npm run build --prefix ./frontend"
+command = "npm install --prefix frontend && npm run build --prefix frontend"
 
 [functions]
 # Directory with serverless functions, including background
